finshing first bage

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="content\styles\style.css">
+    <title>Mohamed Ahmed</title>
 </head>
 <body>
-    <container>
         <header>
             <a href="#" class="logo">
                 <img src="content\Photos\DALL·E 2024-09-14 11.53.10 - A simple logo for a YouTube channel called 'Fast Code,' inspired by fast food branding. The design should focus on a clean, minimalistic style with a .webp" alt="logo">
@@ -19,16 +18,21 @@
                 <a href="" class="header__btn">Contact-Me</a>
             </Nav>
         </header>
-        <main>
-            <div class="photo">
-                Mohamed Ahamed
-                <img src="" alt="photo" class="pro__photo">
+        <section class="main">
+            <div class="compin__div">
+                <div class="profiel__pic"><img src="content/Photos/WhatsApp Image 2023-11-24 at 01.png" alt="profiel__pic"></div>
+                <div class="disc">
+                    <h1>Mohamed Ahmed</h1>
+                    <h2>Mobile Application Developer</h2>
+                    <p>I am Mohamed Ahmed,22 years old,a mobile application developer.</p>
+                    <p>I study at the Faculty of Computers and Artificial Intelligence in Benha.</p>
+                </div>
+                <div class="socialmedia">
+                    <a href=""><img src="content\Photos\facebook.png" alt="facebook"></a>
+                    <a href=""><img src="content\Photos\twitter.png" alt="twitter"></a>
+                    <a href=""><img src="content\Photos\github.png" alt="github"></a>
+                </div>
             </div>
-            <div class="disc">
-                <h1>Mobile Application Developer</h1>
-                <p></p>
-            </div>
-        </main>
-    </container>
+        </section>
 </body>
 </html>
