--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 Mohamed
             </a>
             <nav class="nav">
-                <a href="" class="header__btn">About-Me</a>
-                <a href="" class="header__btn">Projects</a>
-                <a href="" class="header__btn">Contact-Me</a>
+                <a href="content\pages\about.html" class="header__btn">About-Me</a>
+                <a href="content\pages\projects.html" class="header__btn">Projects</a>
+                <a href="content\pages\contact.html" class="header__btn">Contact-Me</a>
             </Nav>
         </header>
         <section class="main">
