--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -19,7 +19,21 @@
         </Nav>
     </header>
     <section class="main">
-        
+        <div class="box">
+            <div class="input">
+                <input type="text" class="name" placeholder="Name">
+                <input type="text" class="email" placeholder="Email">
+                <input type="text" class="message" placeholder="Message">
+                <button class="btn">Send</button>
+            </div>
+            <div class="text">
+                <h2>Phone</h2>
+                <p>01013650401</p>
+                <h2>Email</h2>
+                <p>medomom212@gmail.com</p>
+                <img src="/content/Photos/qr-code.png" alt="">
+            </div>
+        </div>
     </section>
 </body>
 </html>
