--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -19,7 +19,22 @@
         </Nav>
     </header>
     <section class="main">
-        
+        <div class="prj1">
+            <h2></h2>
+            <img src="" alt="">
+        </div>
+        <div class="prj2">
+            <h2></h2>
+            <img src="" alt="">
+        </div>
+        <div class="prj3">
+            <h2></h2>
+            <img src="" alt="">
+        </div>
+        <div class="prj4">
+            <h2></h2>
+            <img src="" alt="">
+        </div>
     </section>
 </body>
 </html>
