finish untill responsive

--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -20,20 +20,24 @@
     </header>
     <section class="main">
         <div class="prj1">
-            <h2></h2>
-            <img src="" alt="">
+            <h2>Projrct1</h2>
+            <img src="/content/Photos/original-359edb44698a3a75caa6fb04d3d2cb98.png" alt="">
+            <button>view</button>
         </div>
         <div class="prj2">
-            <h2></h2>
-            <img src="" alt="">
+            <h2>project2</h2>
+            <img src="/content/Photos/original-3e2638d5a0137cdf07d6fd84f7885d2d.jpg" alt="">
+            <button>view</button>
         </div>
         <div class="prj3">
-            <h2></h2>
-            <img src="" alt="">
+            <h2>project3</h2>
+            <img src="/content/Photos/original-4d521cf3ebad5220d25956800f5b3523.jpg" alt="">
+            <button>view</button>
         </div>
         <div class="prj4">
-            <h2></h2>
-            <img src="" alt="">
+            <h2>project4</h2>
+            <img src="/content/Photos/original-a9945d6f39ff7f18fa8196e1e0859153.jpg" alt="">
+            <button>view</button>
         </div>
     </section>
 </body>
