--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <p>I study at the Faculty of Computers and Artificial Intelligence in Benha.</p>
                 </div>
                 <div class="socialmedia">
-                    <a href=""><img src="content\Photos\facebook.png" alt="facebook"></a>
-                    <a href=""><img src="content\Photos\twitter.png" alt="twitter"></a>
-                    <a href=""><img src="content\Photos\github.png" alt="github"></a>
+                    <a href="https://web.facebook.com/profile.php?id=100012189522589"><img src="content\Photos\facebook.png" alt="facebook"></a>
+                    <a href="https://x.com/Mohamed05232680"><img src="content\Photos\twitter.png" alt="twitter"></a>
+                    <a href="https://github.com/MuhamedAbd"><img src="content\Photos\github.png" alt="github"></a>
                 </div>
             </div>
         </section>
