--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Me</title>
-    <link rel="stylesheet" href="/content/styles/about.css">
+    <link rel="stylesheet" href="../styles/about.css">
 </head>
 <body>
     <header>
         <a href="../../index.html" class="logo">
-            <img src="/content/Photos/DALL·E 2024-09-14 11.53.10 - A simple logo for a YouTube channel called 'Fast Code,' inspired by fast food branding. The design should focus on a clean, minimalistic style with a .webp" alt="logo">
+            <img src="../Photos/DALL·E 2024-09-14 11.53.10 - A simple logo for a YouTube channel called 'Fast Code,' inspired by fast food branding. The design should focus on a clean, minimalistic style with a .webp" alt="logo">
             Mohamed
         </a>
         <nav class="nav">
             <a href="#" class="header__btn">About-Me</a>
-            <a href="/content/pages/projects.html" class="header__btn">Projects</a>
-            <a href="/content/pages/contact.html" class="header__btn">Contact-Me</a>
+            <a href="../pages/projects.html" class="header__btn">Projects</a>
+            <a href="../pages/contact.html" class="header__btn">Contact-Me</a>
         </Nav>
     </header>
     <section class="main">
@@ -52,13 +52,13 @@
         </div>
         <div class="tech">
             <h1>Technologies</h1>
-            <img src="/content/Photos/icons8-flutter-48.png" alt="flutter">
+            <img src="../Photos/icons8-flutter-48.png" alt="flutter">
         </div>
         <div class="lang">
             <h1>My Languages</h1>
-            <img src="/content/Photos/c-.png" alt="icon">
-            <img src="/content/Photos/icons8-dart-48.png" alt="icon">
-            <img src="/content/Photos/python.png" alt="icon">
+            <img src="../Photos/c-.png" alt="icon">
+            <img src="../Photos/icons8-dart-48.png" alt="icon">
+            <img src="../Photos/python.png" alt="icon">
         </div>
     </section>
 </body>
