--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <a href="../../index.html" class="logo">
-            <img src="/content/Photos/DALL·E 2024-09-14 11.53.10 - A simple logo for a YouTube channel called 'Fast Code,' inspired by fast food branding. The design should focus on a clean, minimalistic style with a .webp" alt="logo">
+            <img src="../Photos/DALL·E 2024-09-14 11.53.10 - A simple logo for a YouTube channel called 'Fast Code,' inspired by fast food branding. The design should focus on a clean, minimalistic style with a .webp" alt="logo">
             Mohamed
         </a>
         <nav class="nav">
-            <a href="/content/pages/about.html" class="header__btn">About-Me</a>
-            <a href="/content/pages/projects.html" class="header__btn">Projects</a>
+            <a href="../pages/about.html" class="header__btn">About-Me</a>
+            <a href="../pages/projects.html" class="header__btn">Projects</a>
             <a href="#" class="header__btn">Contact-Me</a>
         </Nav>
     </header>
@@ -31,7 +31,7 @@
                 <p>01013650401</p>
                 <h2>Email</h2>
                 <p>medomom212@gmail.com</p>
-                <img src="/content/Photos/qr-code.png" alt="">
+                <img src="../Photos/qr-code.png" alt="">
             </div>
         </div>
     </section>
