--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -4,39 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projectst</title>
-    <link rel="stylesheet" href="/content/styles/projects.css">
+    <link rel="stylesheet" href="../styles/projects.css">
 </head>
 <body>
     <header>
         <a href="../../index.html" class="logo">
-            <img src="/content/Photos/DALL·E 2024-09-14 11.53.10 - A simple logo for a YouTube channel called 'Fast Code,' inspired by fast food branding. The design should focus on a clean, minimalistic style with a .webp" alt="logo">
+            <img src="../Photos/DALL·E 2024-09-14 11.53.10 - A simple logo for a YouTube channel called 'Fast Code,' inspired by fast food branding. The design should focus on a clean, minimalistic style with a .webp" alt="logo">
             Mohamed
         </a>
         <nav class="nav">
-            <a href="/content/pages/about.html" class="header__btn">About-Me</a>
+            <a href="../pages/about.html" class="header__btn">About-Me</a>
             <a href="#" class="header__btn">Projects</a>
-            <a href="/content/pages/contact.html" class="header__btn">Contact-Me</a>
+            <a href="../pages/contact.html" class="header__btn">Contact-Me</a>
         </Nav>
     </header>
     <section class="main">
         <div class="prj1">
             <h2>Projrct1</h2>
-            <img src="/content/Photos/original-359edb44698a3a75caa6fb04d3d2cb98.png" alt="">
+            <img src="../Photos/original-359edb44698a3a75caa6fb04d3d2cb98.png" alt="">
             <button>view</button>
         </div>
         <div class="prj2">
             <h2>project2</h2>
-            <img src="/content/Photos/original-3e2638d5a0137cdf07d6fd84f7885d2d.jpg" alt="">
+            <img src="../Photos/original-3e2638d5a0137cdf07d6fd84f7885d2d.jpg" alt="">
             <button>view</button>
         </div>
         <div class="prj3">
             <h2>project3</h2>
-            <img src="/content/Photos/original-4d521cf3ebad5220d25956800f5b3523.jpg" alt="">
+            <img src="../Photos/original-4d521cf3ebad5220d25956800f5b3523.jpg" alt="">
             <button>view</button>
         </div>
         <div class="prj4">
             <h2>project4</h2>
-            <img src="/content/Photos/original-a9945d6f39ff7f18fa8196e1e0859153.jpg" alt="">
+            <img src="../Photos/original-a9945d6f39ff7f18fa8196e1e0859153.jpg" alt="">
             <button>view</button>
         </div>
     </section>
