--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
                 Mohamed
             </a>
             <nav class="nav">
-                <a href="/content/pages/about.html" class="header__btn">About-Me</a>
-                <a href="/content/pages/projects.html" class="header__btn">Projects</a>
-                <a href="/content/pages/contact.html" class="header__btn">Contact-Me</a>
+                <a href="./content/pages/about.html" class="header__btn">About-Me</a>
+                <a href="./content/pages/projects.html" class="header__btn">Projects</a>
+                <a href="./content/pages/contact.html" class="header__btn">Contact-Me</a>
             </Nav>
         </header>
         <section class="main">
             <div class="compin__div">
-                <div class="profiel__pic"><img src="/content/Photos/WhatsApp Image 2023-11-24 at 01.png" alt="profiel__pic"></div>
+                <div class="profiel__pic"><img src="./content/Photos/WhatsApp Image 2023-11-24 at 01.png" alt="profiel__pic"></div>
                 <div class="disc">
                     <h1>Mohamed Ahmed</h1>
                     <h2>Mobile Application Developer</h2>
@@ -28,9 +28,9 @@
                     <p>I study at the Faculty of Computers and Artificial Intelligence in Benha.</p>
                 </div>
                 <div class="socialmedia">
-                    <a href="https://web.facebook.com/profile.php?id=100012189522589"><img src="/content/Photos/facebook-logo.png" alt="facebook"></a>
-                    <a href="https://x.com/Mohamed05232680"><img src="/content/Photos/twitter.png" alt="twitter"></a>
-                    <a href="https://github.com/MuhamedAbd"><img src="/content/Photos/github.png" alt="github"></a>
+                    <a href="https://web.facebook.com/profile.php?id=100012189522589"><img src="./content/Photos/facebook-logo.png" alt="facebook"></a>
+                    <a href="https://x.com/Mohamed05232680"><img src="./content/Photos/twitter.png" alt="twitter"></a>
+                    <a href="https://github.com/MuhamedAbd"><img src="./content/Photos/github.png" alt="github"></a>
                 </div>
             </div>
         </section>
