--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../portfolio/content/styles/style.css">
+    <link rel="stylesheet" href="./content/styles/style.css">
     <title>Mohamed Ahmed</title>
 </head>
 <body>
@@ -16,11 +16,12 @@
                 <a href="./content/pages/about.html" class="header__btn">About-Me</a>
                 <a href="./content/pages/projects.html" class="header__btn">Projects</a>
                 <a href="./content/pages/contact.html" class="header__btn">Contact-Me</a>
+                <button id="dark__mode"></button>
             </Nav>
         </header>
         <section class="main">
             <div class="compin__div">
-                <div class="profiel__pic"><img src="./content/Photos/WhatsApp Image 2023-11-24 at 01.png" alt="profiel__pic"></div>
+                <div class="profiel__pic"><img src="./content/Photos/Remove background project.png" alt="profiel__pic"></div>
                 <div class="disc">
                     <h1>Mohamed Ahmed</h1>
                     <h2>Mobile Application Developer</h2>
@@ -34,5 +35,6 @@
                 </div>
             </div>
         </section>
+        <script src="/index.js"></script>
 </body>
 </html>
