--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -40,5 +40,10 @@
             <button>view</button>
         </div>
     </section>
+    <div id="project-details" style="display: none;"></div>
+        <p id="details-text"></p>
+        <button id="close-details">Close</button>
+    </div>
+    <script src="../../content/js/projects.js"></script>
 </body>
 </html>
