--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -21,22 +21,22 @@
     
     <section class="main">
         <div class="prj1">
-            <h2>Project 1</h2>
+            <h2> Plan</h2>
             <img src="/content/Photos/original-359edb44698a3a75caa6fb04d3d2cb98.png" alt="">
             <button class="view-btn" data-details="This project focuses on creating a modern task management application called Plan. The platform allows users to organize their to-do lists, schedule tasks, and track progress with a sleek user interface. It’s ideal for personal and team project planning, featuring intuitive workflows and reminders to stay on track.">View</button>
         </div>
         <div class="prj2">
-            <h2>Project 2</h2>
-            <img src="../Photos/attachment_79852423.png" alt="">
+            <h2>MyApp Templates</h2>
+            <img src="../Photos/DALL·E 2024-09-19 06.58.09 - A minimalistic and modern logo for 'MyApp Templates.' The logo should be simple, featuring clean lines and abstract shapes that represent app developm.webp" alt="">
             <button class="view-btn" data-details="This project provides a library of customizable app templates designed to streamline the development process for mobile and web applications. Featuring a vibrant logo with a colorful chameleon, it symbolizes adaptability and versatility. The platform offers pre-designed layouts for a variety of app categories, allowing developers to save time and focus on adding unique functionality to their apps while maintaining a professional and polished user interface.">View</button>
         </div>
         <div class="prj3">
-            <h2>Project 3</h2>
+            <h2>Unityle</h2>
             <img src="../Photos/original-4d521cf3ebad5220d25956800f5b3523.jpg" alt="">
             <button class="view-btn" data-details="Unityle is a security-focused project management tool that integrates advanced encryption and collaboration features. It provides a safe environment for teams to coordinate their projects, share sensitive information, and ensure that data integrity is maintained across workflows. The striking blue design symbolizes trust and security.">View</button>
         </div>
         <div class="prj4">
-            <h2>Project 4</h2>
+            <h2>Chat App</h2>
             <img src="../Photos/original-a9945d6f39ff7f18fa8196e1e0859153.jpg" alt="">
             <button class="view-btn" data-details="This project is a chat application designed for real-time communication between users. With a simple yet vibrant orange interface, the app offers instant messaging, group chats, and notifications to facilitate easy and dynamic interaction. Its user-friendly design and scalability make it perfect for both personal and professional use.">View</button>
         </div>
