--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -22,7 +22,7 @@
     <section class="main">
         <div class="prj1">
             <h2> Plan</h2>
-            <img src="/content/Photos/original-359edb44698a3a75caa6fb04d3d2cb98.png" alt="">
+            <img src="../Photos/original-359edb44698a3a75caa6fb04d3d2cb98.png" alt="">
             <button class="view-btn" data-details="This project focuses on creating a modern task management application called Plan. The platform allows users to organize their to-do lists, schedule tasks, and track progress with a sleek user interface. It’s ideal for personal and team project planning, featuring intuitive workflows and reminders to stay on track.">View</button>
         </div>
         <div class="prj2">
@@ -46,7 +46,7 @@
         <p id="details-text"></p>
         <button id="close-details">Close</button>
     </div>
-    <script src="/content/js/projects.js"></script>
+    <script src="../js/projects.js"></script>
     
 </body>
 </html>
